--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,3 +4,7 @@ $colorLinkMenu: #737373;
 $colorLinkMenuHover: #bb5d5d;
 $colorTitle: #252B42;
 $colorSubtitle: #737373;
+$colorTextButton: #784F33;
+$colorBcgButton: transparent;
+$colorTextButtonHover: #FFFFFF;
+$colorBcgButtonHover: #784F33;
