--- a/src/components/Asides/AsideHeader/styles.scss
+++ b/src/components/Asides/AsideHeader/styles.scss
@@ -8,6 +8,7 @@
     padding: 0 0 168px 195px;
     box-sizing: border-box;
     height: 770px;
+    z-index: 1;
     &__image {
         position: absolute;
         top: 0;
