--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,4 +1,5 @@
 $bcgColorBody: #EDEDED;
+$bcgPage: #FFFFFF;
 $widthPage: 1440px;
 $colorLinkMenu: #737373;
 $colorLinkMenuHover: #bb5d5d;
@@ -8,3 +9,7 @@ $colorTextButton: #784F33;
 $colorBcgButton: transparent;
 $colorTextButtonHover: #FFFFFF;
 $colorBcgButtonHover: #784F33;
+$bacgMatterSvg: #295C7A;
+$colorTextButton: #295C7A;
+$colorTextButtonHover: #FFFFFF;
+$colorBcgButtonHover: #295C7A;;
