--- a/src/components/Sections/SectionMatters/styles.scss
+++ b/src/components/Sections/SectionMatters/styles.scss
@@ -32,7 +32,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: $bacgMatterSvg;
+            background: $bcgMatterSvg;
             border-radius: 50%;
         }
         &__title {
