--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -9,7 +9,10 @@ $colorTextButton: #784F33;
 $colorBcgButton: transparent;
 $colorTextButtonHover: #FFFFFF;
 $colorBcgButtonHover: #784F33;
-$bacgMatterSvg: #295C7A;
-$colorTextButton: #295C7A;
-$colorTextButtonHover: #FFFFFF;
-$colorBcgButtonHover: #295C7A;;
+$bcgMatterSvg: #295C7A;
+$bcgMatterSvgHover: #85b8d5;
+$fillSvgHover: #2fc7ae;
+$colorTextButton2: #295C7A;
+$colorTextButtonHover2: #FFFFFF;
+$colorBcgButtonHover2: #295C7A;
+$bcgSection: #FAFAFA;
