--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -10,9 +10,13 @@ $colorBcgButton: transparent;
 $colorTextButtonHover: #FFFFFF;
 $colorBcgButtonHover: #784F33;
 $bcgMatterSvg: #295C7A;
+$bcgSectionBlue: #295C7A;
 $bcgMatterSvgHover: #85b8d5;
 $fillSvgHover: #2fc7ae;
 $colorTextButton2: #295C7A;
 $colorTextButtonHover2: #FFFFFF;
 $colorBcgButtonHover2: #295C7A;
 $bcgSection: #FAFAFA;
+$colorTitleWhite: #FFFFFF;
+$colorSubtitleWhite: #FFFFFF;
+$bcgBlock: #FFFFFF;
