--- a/src/components/UI/SubtitleSection/styles.scss
+++ b/src/components/UI/SubtitleSection/styles.scss
@@ -12,4 +12,9 @@
     &_section-about-text {
         margin: 10px 0 0 0;
     }
+    &_section-reviews {
+        text-align: center;
+        margin: 10px 0 0 0;
+        color: $colorSubtitleWhite;
+    }
 }
