add section attorneys

--- a/src/components/UI/SubtitleSection/styles.scss
+++ b/src/components/UI/SubtitleSection/styles.scss
@@ -17,4 +17,8 @@
         margin: 10px 0 0 0;
         color: $colorSubtitleWhite;
     }
+    &_section-attorneys {
+        text-align: center;
+        margin: 10px 0 0 0;
+    }
 }
