--- a/src/components/UI/SubtitleSection/styles.scss
+++ b/src/components/UI/SubtitleSection/styles.scss
@@ -21,4 +21,8 @@
         text-align: center;
         margin: 10px 0 0 0;
     }
+    &_section-request-text {
+        color: $colorSubtitleWhite;
+        margin: 15px 0 0 0;
+    }
 }
