--- a/src/components/UI/TitleSection/styles.scss
+++ b/src/components/UI/TitleSection/styles.scss
@@ -5,4 +5,10 @@
     &_section-reviews {
         color: $colorSubtitleWhite;
     }
+    &_section-request-text {
+        color: $colorSubtitleWhite;
+    }
+    &_form-request {
+        margin: 0 0 40px 0;
+    }
 }
