--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,47 +1,37 @@
 //widths
 $widthPage: 1440px;
 
-
-
-
 //background colors
-$bcgColorBody: #EDEDED;
-$bcgPage: #FFFFFF;
-$bcgSectionBlue: #295C7A;
+$bcgColorBody: #ededed;
+$bcgPage: #ffffff;
+$bcgSectionBlue: #295c7a;
 $bcgMatterSvgHover: #85b8d5;
-$bcgBlock: #FFFFFF;
+$bcgBlock: #ffffff;
 $colorBcgButton: transparent;
-$bcgSection: #FAFAFA;
-
-
-
+$bcgSection: #fafafa;
+$bcgSectionBlue: #252b42;
+$bcgInput: #F9F9F9;
+$colorBorderInput: #BDBDBD;
+$bcgColorBrown: #784f33;
 
 // colors text
 $colorLinkMenu: #737373;
-$colorTitle: #252B42;
+$colorTitle: #252b42;
 $colorSubtitle: #737373;
-$colorTextButton: #784F33;
-$colorTextButton2: #295C7A;
-$colorTitleWhite: #FFFFFF;
-$colorSubtitleWhite: #FFFFFF;
-$colorTextYellow: #D0A144;
-
-
-
+$colorTextButton: #784f33;
+$colorTextButton2: #295c7a;
+$colorTitleWhite: #ffffff;
+$colorSubtitleWhite: #ffffff;
+$colorTextYellow: #d0a144;
+$colorTextRed: #d22a2a;
 
 // colors text hover
 $colorLinkMenuHover: #bb5d5d;
-$colorTextButtonHover: #FFFFFF;
-$colorBcgButtonHover: #784F33;
-$colorTextButtonHover2: #FFFFFF;
-$colorBcgButtonHover2: #295C7A;
-
-
-
+$colorTextButtonHover: #ffffff;
+$colorBcgButtonHover: #784f33;
+$colorTextButtonHover2: #ffffff;
+$colorBcgButtonHover2: #295c7a;
 
 //colors for svg
-$bcgMatterSvg: #295C7A;
+$bcgMatterSvg: #295c7a;
 $fillSvgHover: #2fc7ae;
-
-
-
