--- a/src/components/Sections/SectionMatters/styles.scss
+++ b/src/components/Sections/SectionMatters/styles.scss
@@ -1,5 +1,6 @@
 .section-matters {
     padding: 100px 0 150px 195px;
+    overflow: hidden;
     &__buttons {
         margin: 50px 0 0 0;
         display: flex;
