--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,3 +9,13 @@ body {
     margin: 0 auto;
     background: $bcgPage;
 }
+.progress-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 10px;
+    background: $bcgMatterSvg;
+    transform-origin: 0%;
+    z-index: 5;
+}
