--- a/src/components/Body/Header/styles.scss
+++ b/src/components/Body/Header/styles.scss
@@ -1,4 +1,17 @@
 .header {
     position: absolute;
     padding: 23px 59px 43px 195px;
+    @media screen and (max-width: 768px) {
+        padding: 0;
+        max-width: 100%;
+        width: 768px;
+        transition: height 0.7s ease;
+        height: 0;
+        position: static;
+        &_active {
+            height: 532px;
+            position: relative;
+            transition: height 0.7s ease;
+        }
+    }
 }
