--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,7 +4,7 @@ $widthPage: 1440px;
 //background colors
 $bcgColorBody: #ededed;
 $bcgPage: #ffffff;
-$bcgSectionBlue: #295c7a;
+$bcgSectionBlueReview: #295c7a;
 $bcgMatterSvgHover: #85b8d5;
 $bcgBlock: #ffffff;
 $colorBcgButton: transparent;
