--- a/src/components/Asides/AsideHeader/styles.scss
+++ b/src/components/Asides/AsideHeader/styles.scss
@@ -9,12 +9,24 @@
     box-sizing: border-box;
     height: 770px;
     z-index: 1;
+    @media screen and (max-width: 768px) {
+        padding: 80px 43px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 652px;
+        gap: 40px 0;
+    }
     &__image {
         position: absolute;
         top: 0;
         width: 100%;
         z-index: -1;
         object-fit: cover;
+        @media screen and (max-width: 768px) {
+            max-width: 652px;
+        }
     }
     &__title {
         padding: 225px 0 0 0;
@@ -23,13 +35,23 @@
         max-width: 509px;
         letter-spacing: 0.2px;
         grid-row: 1;
+        @media screen and (max-width: 768px) {
+            @include fontMartel(700, 40px, 50px, $colorTitle);
+            text-align: center;
+            max-width: 327px;
+            padding: 0;
+        }
     }
     &__subtitle {
         @include fontMontserrat(500, 20px, 30px, $colorSubtitle);
         letter-spacing: 0.2px;
         margin: 0;
         max-width: 376px;
-        padding: 0 0 0 0;
+        padding: 0;
         grid-row: 2;
+        @media screen and (max-width: 768px) {
+            text-align: center;
+            max-width: 279px;
+        }
     }
 }
