--- a/src/components/Sections/SectionAbout/styles.scss
+++ b/src/components/Sections/SectionAbout/styles.scss
@@ -4,6 +4,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media screen and (max-width: 768px) {
+        padding: 100px 42px 207px;
+    }
 }
 .section-about-block {
     display: flex;
@@ -16,6 +19,10 @@
 .video-block {
     position: relative;
     display: flex;
+    @media screen and (max-width: 768px) {
+        max-width: 768px;
+        min-width: 310px;
+    }
     &::before {
         content: '';
         position: absolute;
@@ -24,7 +31,7 @@
         background: linear-gradient(180deg, rgba(0, 0, 0, 0) 14.58%, rgba(56, 56, 56, 0.84) 100%);
     }
     &__image {
-        width: 597px;
+        max-width: 100%;
         height: 442px;
         object-fit: cover;
 
