--- a/src/components/Sections/SectionRequest/styles.scss
+++ b/src/components/Sections/SectionRequest/styles.scss
@@ -1,17 +1,39 @@
 .section-request {
-    padding: 0 0 416px 0;
+    min-height: 416px;
     background: $bcgSection;
     position: relative;
+    padding: 0 0 416px 0;
+    @media screen and (max-width: 768px) {
+        padding: 0 0 87px 0;
+    }
     &-text {
         background: $bcgSectionBlue;
-        padding: 100px 197px 465px 195px;
+        padding: 100px 30px 0;
         display: grid;
+        grid-template-rows: minmax(min-content, max-content);
+        gap: 15px 0;
+        justify-content: space-around;
+        max-height: 100%;
+        min-height: 807px;
+        @media screen and (max-width: 768px) {
+            justify-content: flex-start;
+            box-sizing: border-box;
+        }
         &__image {
-            width: 415px;
+            max-width: 415px;
             height: 169px;
             grid-column: 2;
             grid-row: 1 / 3;
+            @media screen and (max-width: 768px) {
+                margin: 100px 0 0 0;
+                max-width: 313px;
+            }
+        }
+        @media screen and (max-width: 768px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 125px 47px 40px;
         }
     }
-
 }
