--- a/src/components/Sections/SectionReviews/styles.scss
+++ b/src/components/Sections/SectionReviews/styles.scss
@@ -4,7 +4,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: $bcgSectionBlue;
+    background: $bcgSectionBlueReview;
+    @media screen and (max-width: 768px) {
+        max-height: 1767px;
+        padding: 80px 30px;
+    }
 }
 .slides-clients {
     max-width: 100%;
@@ -12,6 +16,10 @@
     display: flex;
     justify-content: center;
     padding: 90px 0 0 0;
+    @media screen and (max-width: 768px) {
+        padding: 60px 0 0 0;
+        max-height: 438px;
+    }
 }
 .swiper-slide-item {
     padding: 30px 60px;
@@ -19,12 +27,23 @@
     width: 460px !important;
     height: 288px;
     box-sizing: border-box;
+    position: relative;
+    @media screen and (max-width: 768px) {
+        max-width: 325px !important;
+        height: 408px !important;
+        padding: 10px 54px 30px;
+    }
     &__image {
         position: absolute;
         top: 28px;
         left: -79px;
         width: 96px;
         height: 96px;
+        @media screen and (max-width: 768px) {
+            position: relative;
+            left: 0;
+            top: 0;
+        }
     }
     &__title {
         @include fontMartel(700, 24px, 32px, $colorTitle);
