--- a/src/components/UI/FormRequest/styles.scss
+++ b/src/components/UI/FormRequest/styles.scss
@@ -8,11 +8,33 @@
         left: 50%;
         transform: translateX(-50%);
         bottom: 121px;
+        @media screen and (max-width: 768px) {
+            position: relative;
+            bottom: 0;
+            display: flex;
+            flex-direction: column;
+        }
+    }
+    &_learn-more {
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        @media screen and (max-width: 768px) {
+            position: relative;
+            bottom: 0;
+            display: flex;
+            flex-direction: column;
+            max-width: 500px;
+        }
     }
     &__image {
         width: 364px;
         height: auto;
         object-fit: cover;
+        @media screen and (max-width: 768px) {
+            width: 100%;
+            max-height: 400px;
+        }
     }
 }
 .form-request {
@@ -22,6 +44,7 @@
     box-sizing: border-box;
     width: 688px;
     max-width: 100%;
+    height: 100%;
     gap: 5px;
     position: relative;
     &-input {
