--- a/src/components/UI/LinksMenu/styles.scss
+++ b/src/components/UI/LinksMenu/styles.scss
@@ -4,6 +4,16 @@
     list-style-type: none;
     display: flex;
     gap: 23px;
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, -100%);
+        transition: transform 0.7s, visibility 0.7s;
+        visibility: hidden;
+        gap: 30px;
+        top: 0;
+    }
     &-item {
         &::first-letter {
             text-transform: uppercase;
@@ -12,6 +22,13 @@
             @include openSans(600, 14px, 24px, $colorLinkMenu);
             text-decoration: none;
             @include hoverOpenSans($colorLinkMenuHover);
+            @media screen and (max-width: 768px) {
+                @include openSans(400, 30px, 45px, $colorLinkMenu);
+            }
         }
+    }
+    &_active {
+        transform: translate(-50%, 164px);
+        visibility: visible;
     }
 }
