--- a/src/components/UI/SubtitleSection/styles.scss
+++ b/src/components/UI/SubtitleSection/styles.scss
@@ -2,6 +2,9 @@
     @include openSans(400, 14px, 20px, $colorSubtitle);
     margin: 0;
     white-space: pre-line;
+    @media screen and (max-width: 768px) {
+        max-width: 330px;
+    }
     &_section-matters {
         margin: 10px 0 0 0;
     }
@@ -20,9 +23,15 @@
     &_section-attorneys {
         text-align: center;
         margin: 10px 0 0 0;
+
     }
     &_section-request-text {
         color: $colorSubtitleWhite;
-        margin: 15px 0 0 0;
+        margin: 0;
+        grid-row: 2;
+        grid-column: 1;
+        @media screen and (max-width: 1024px) {
+            white-space: inherit;
+        }
     }
 }
